language_tests/source_files/invalid/defer.tr
func asyncValue() async -> int32 {
    return 1
}

func badAwait() async {
    defer { let _ = await asyncValue() }
}

func main() {
    defer { break }
    defer { continue }
    defer { return }
}
